--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">oa</string>
+    <string name="app_name">龙岗广电办公</string>
+    <string name="app_version">android 1.2.1</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
